@@ -99,7 +99,7 @@ newversion:
 
 potfile:
 	chmod u+w -R  .
-	sh -c '(find . -type f -name "*.desktop.in";find ./src -type f -name "*.py";find ./src/netconfpkg/gui -type f -name "*.glade") |sed -e "s#^\./##g"> po/POTFILES.in'
-	sh -c '(find . -type l -name "*.desktop.in";find ./src -type l -name "*.py";find ./src/netconfpkg/gui -type l -name "*.glade") |sed -e "s#^\./##g"> po/POTFILES.skip'
+	sh -c '(find . -type f -name "*.desktop.in";find ./src -type f -name "*.py";find ./src/netconfpkg/gui -type f -name "*.glade"|fgrep -v version.py;echo version.py.in) |sed -e "s#^\./##g"> po/POTFILES.in'
+	sh -c '(find . -type l -name "*.desktop.in";find ./src -type l -name "*.py";find ./src/netconfpkg/gui -type l -name "*.glade";echo version.py) |sed -e "s#^\./##g"> po/POTFILES.skip'
 	make 
 	make -C po update-po
