@@ -2,7 +2,7 @@ AC_INIT(./aclocal.m4)
 
 MAJOR=1
 MINOR=4
-RELEASE=2
+RELEASE=3
 
 RPM_RELEASE=1
 
