@@ -1,1 +1,2 @@
 src/netconf_cmd.py
+src/version.py
