@@ -1,6 +1,8 @@
 2007-10-08  Harald Hoyer  <harald@redhat.com>
 
-	* ChangeLog 1.162, po/uk.po 1.15, po/ur.po 1.7, po/vi.po 1.14, po/zh_CN.po 1.145, po/zh_TW.po 1.174, po/sr@Latn.po 1.11, po/sv.po 1.188, po/system-config-network.pot 1.20, po/ta.po 1.19, po/te.po 1.11, po/tr.po 1.120, po/ro.po 1.12, po/ru.po 1.145, po/si.po 1.9, po/sk.po 1.10, po/sl.po 1.11, po/sq.po 1.8, po/sr.po 1.13, po/no.po 1.177, po/or.po 1.28, po/pa.po 1.31, po/pl.po 1.31, po/pt.po 1.190, po/pt_BR.po 1.55, po/mk.po 1.15, po/ml.po 1.18, po/mr.po 1.25, po/ms.po 1.62, po/my.po 1.6, po/nb.po 1.182, po/nl.po 1.53, po/ka.po 1.10, po/kn.po 1.19, po/ko.po 1.206, po/ku.po 1.7, po/lo.po 1.6, po/hu.po 1.34, po/hy.po 1.6, po/id.po 1.9, po/is.po 1.189, po/it.po 1.196, po/ja.po 1.208, po/fa.po 1.9, po/fi.po 1.19, po/fr.po 1.217, po/gu.po 1.17, po/he.po 1.7, po/hi.po 1.25, po/hr.po 1.18, po/de.po 1.221, po/el.po 1.148, po/en_GB.po 1.9, po/es.po 1.204, po/et.po 1.20, po/bs.po 1.5, po/ca.po 1.16, po/cs.po 1.162, po/cy.po 1.12, po/da.po 1.152, po/POTFILES.in 1.37, po/POTFILES.skip 1.4, po/ar.po 1.8, po/as.po 1.11, po/be.po 1.8, po/bg.po 1.16, po/bn.po 1.17, po/bn_IN.po 1.18:
+	* system-config-network.spec.in 1.38: release 1.4.2-1 moved
+
+	* ChangeLog 1.163, po/uk.po 1.15, po/ur.po 1.7, po/vi.po 1.14, po/zh_CN.po 1.145, po/zh_TW.po 1.174, po/sr@Latn.po 1.11, po/sv.po 1.188, po/system-config-network.pot 1.20, po/ta.po 1.19, po/te.po 1.11, po/tr.po 1.120, po/ro.po 1.12, po/ru.po 1.145, po/si.po 1.9, po/sk.po 1.10, po/sl.po 1.11, po/sq.po 1.8, po/sr.po 1.13, po/no.po 1.177, po/or.po 1.28, po/pa.po 1.31, po/pl.po 1.31, po/pt.po 1.190, po/pt_BR.po 1.55, po/mk.po 1.15, po/ml.po 1.18, po/mr.po 1.25, po/ms.po 1.62, po/my.po 1.6, po/nb.po 1.182, po/nl.po 1.53, po/ka.po 1.10, po/kn.po 1.19, po/ko.po 1.206, po/ku.po 1.7, po/lo.po 1.6, po/hu.po 1.34, po/hy.po 1.6, po/id.po 1.9, po/is.po 1.189, po/it.po 1.196, po/ja.po 1.208, po/fa.po 1.9, po/fi.po 1.19, po/fr.po 1.217, po/gu.po 1.17, po/he.po 1.7, po/hi.po 1.25, po/hr.po 1.18, po/de.po 1.221, po/el.po 1.148, po/en_GB.po 1.9, po/es.po 1.204, po/et.po 1.20, po/bs.po 1.5, po/ca.po 1.16, po/cs.po 1.162, po/cy.po 1.12, po/da.po 1.152, po/POTFILES.in 1.37, po/POTFILES.skip 1.4, po/ar.po 1.8, po/as.po 1.11, po/be.po 1.8, po/bg.po 1.16, po/bn.po 1.17, po/bn_IN.po 1.18:
 	release 1.4.2-1
 
 	* src/netconfpkg/genClass.py 1.33: added comment
